--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <logback.version>1.2.3</logback.version>
         <!-- Shiro 版本 -->
         <shiro.version>1.4.0</shiro.version>
+        <!-- Druid 版本 -->
+        <druid.version>1.1.2</druid.version>
         <!-- Fastjson 版本 -->
         <fastjson.version>1.2.33</fastjson.version>
         <!-- Junit 版本 -->
@@ -208,6 +210,13 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
             <version>${shiro.version}</version>
+        </dependency>
+
+        <!-- Druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
         </dependency>
 
         <!-- Fastjson -->
