--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mochousoft</groupId>
     <artifactId>ssm-basic-webapp</artifactId>
@@ -17,7 +16,7 @@
         <mybatis.version>3.4.4</mybatis.version>
         <mybatis.spring.version>1.3.1</mybatis.spring.version>
         <!-- Mysql 版本 -->
-        <mysql.version>6.0.6</mysql.version>
+        <mysql.version>5.1.39</mysql.version>
         <!-- JSP/Servlet 版本 -->
         <jstl.version>1.2</jstl.version>
         <servlet-api.version>3.1.0</servlet-api.version>
@@ -33,6 +32,8 @@
         <shiro.version>1.4.0</shiro.version>
         <!-- Druid 版本 -->
         <druid.version>1.1.2</druid.version>
+        <!-- PageHelper 版本 -->
+        <pagehelper.version>5.0.0</pagehelper.version>
         <!-- Fastjson 版本 -->
         <fastjson.version>1.2.33</fastjson.version>
         <!-- Junit 版本 -->
@@ -217,6 +218,13 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
+        </dependency>
+
+        <!-- PageHelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
 
         <!-- Fastjson -->
